infra/k8s/log-simulator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-simulator
  namespace: forensic-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-simulator
  template:
    metadata:
      labels:
        app: log-simulator
    spec:
      containers:
      - name: log-simulator
        image: acrlogpraveen99.azurecr.io/log-simulator:latest
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
