infra/k8s/ai-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: forensic-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ai-service
      annotations:
        ad.datadoghq.com/python-ai.logs: '[{"source": "python", "service": "ai-service"}]'
        # Datadog monitoring for the KAFKA connection (Aiven)
        # Using heartbeats inside app logs instead of Agent check to avoid SSL CA trust noise.
        # ad.datadoghq.com/python-ai.check_names: '["kafka_consumer"]'
    spec:
      # --- ADDITION 1: Define the Certificate Volume ---
      volumes:
      - name: kafka-certs-vol
        secret:
          secretName: kafka-certs
      # ------------------------------------------------
      containers:
      - name: python-ai
        image: acrlogpraveen99.azurecr.io/python-ai:latest
        imagePullPolicy: Always
        # --- ADDITION 2: Mount the Certificates folder ---
        volumeMounts:
        - name: kafka-certs-vol
          mountPath: "/app/certs"
          readOnly: true
        # -------------------------------------------------
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: forensic-platform
spec:
  selector:
    app: ai-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
