infra/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: forensic-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: acr-pull-secret
      containers:
      - name: ui
        image: acrlogpraveen99.azurecr.io/react-ui:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: forensic-platform
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
