infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-analyzer-ingress
  namespace: forensic-platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: "go-gateway"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dashboard.praveen-challa.tech
    - back.praveen-challa.tech
    secretName: tls-secret
  rules:
  - host: back.praveen-challa.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-gateway
            port:
              number: 80
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: go-gateway
            port:
              number: 80
  - host: dashboard.praveen-challa.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
